// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-diagnostics - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Debug Azure production issues on Azure using AppLens, Azure Monitor, resource health, and safe triage. WHEN: debug production issues, troubleshoot container apps, troubleshoot functions, troubleshoot AKS, kubectl cannot connect, kube-system/CoreDNS failures, pod pending, crashloop, node not ready, upgrade failures, analyze logs, KQL, insights, image pull failures, cold start issues, health probe failures, resource health, root cause of errors.",
  "extractedKeywords": [
    "aks",
    "analyze",
    "applens",
    "apps",
    "azure",
    "cannot",
    "cause",
    "cli",
    "cold",
    "connect",
    "container",
    "coredns",
    "crashloop",
    "debug",
    "diagnostic",
    "diagnostics",
    "errors",
    "failures",
    "function",
    "functions",
    "health",
    "image",
    "insights",
    "issues",
    "kube-system",
    "kubectl",
    "kubernetes",
    "logs",
    "mcp",
    "monitor",
    "networking",
    "node",
    "pending",
    "probe",
    "production",
    "pull",
    "ready",
    "resource",
    "root",
    "safe",
    "start",
    "triage",
    "troubleshoot",
    "upgrade",
    "using",
    "when",
  ],
  "name": "azure-diagnostics",
}
`;

exports[`azure-diagnostics - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "aks",
  "analyze",
  "applens",
  "apps",
  "azure",
  "cannot",
  "cause",
  "cli",
  "cold",
  "connect",
  "container",
  "coredns",
  "crashloop",
  "debug",
  "diagnostic",
  "diagnostics",
  "errors",
  "failures",
  "function",
  "functions",
  "health",
  "image",
  "insights",
  "issues",
  "kube-system",
  "kubectl",
  "kubernetes",
  "logs",
  "mcp",
  "monitor",
  "networking",
  "node",
  "pending",
  "probe",
  "production",
  "pull",
  "ready",
  "resource",
  "root",
  "safe",
  "start",
  "triage",
  "troubleshoot",
  "upgrade",
  "using",
  "when",
]
`;
